meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__network_interfaces__test__basic_delta_b_c_metrics.snap
---
source: memfaultd/src/metrics/system_metrics/network_interfaces.rs
expression: result_c.unwrap()
---
[
  {
    "name": "interface/eth0/bytes_per_second/rx",
    "value": {
      "Histogram": {
        "value": 83.33333,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/packets_per_second/rx",
    "value": {
      "Histogram": {
        "value": 0.66667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/errors_per_second/rx",
    "value": {
      "Histogram": {
        "value": 0.16667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/dropped_per_second/rx",
    "value": {
      "Histogram": {
        "value": 0.16667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/bytes_per_second/tx",
    "value": {
      "Histogram": {
        "value": 66.66667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/packets_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.83333,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/errors_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.66667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/dropped_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.66667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "connectivity_eth0_recv_bytes",
    "value": {
      "Counter": {
        "value": 2500.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "connectivity_eth0_sent_bytes",
    "value": {
      "Counter": {
        "value": 2000.0,
        "timestamp": "[timestamp]"
      }
    }
  }
]
