meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__network_interfaces__test__different_interfaces_b_d_metrics.snap
---
source: memfaultd/src/metrics/system_metrics/network_interfaces.rs
expression: result_d.unwrap()
---
[
  {
    "name": "interface/eth1/bytes_per_second/rx",
    "value": {
      "Histogram": {
        "value": 20.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth1/packets_per_second/rx",
    "value": {
      "Histogram": {
        "value": 0.33333,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth1/errors_per_second/rx",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth1/dropped_per_second/rx",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth1/bytes_per_second/tx",
    "value": {
      "Histogram": {
        "value": 3.33333,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth1/packets_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth1/errors_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth1/dropped_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  }
]
