meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__network_interfaces__test__with_overflow_a_b_metrics.snap
---
source: memfaultd/src/metrics/system_metrics/network_interfaces.rs
expression: result_b.unwrap()
---
[
  {
    "name": "interface/eth0/bytes_per_second/rx",
    "value": {
      "Histogram": {
        "value": 250.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/packets_per_second/rx",
    "value": {
      "Histogram": {
        "value": 5.5,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/errors_per_second/rx",
    "value": {
      "Histogram": {
        "value": 1.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/dropped_per_second/rx",
    "value": {
      "Histogram": {
        "value": 1.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/bytes_per_second/tx",
    "value": {
      "Histogram": {
        "value": 100.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/packets_per_second/tx",
    "value": {
      "Histogram": {
        "value": 2.5,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/errors_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/dropped_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  }
]
