meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__network_interfaces__test__with_overflow_b_c_metrics.snap
---
source: memfaultd/src/metrics/system_metrics/network_interfaces.rs
expression: result_c.unwrap()
---
[
  {
    "name": "interface/eth0/bytes_per_second/rx",
    "value": {
      "Histogram": {
        "value": 83.4,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/packets_per_second/rx",
    "value": {
      "Histogram": {
        "value": 0.66667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/errors_per_second/rx",
    "value": {
      "Histogram": {
        "value": 0.16667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/dropped_per_second/rx",
    "value": {
      "Histogram": {
        "value": 0.16667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/bytes_per_second/tx",
    "value": {
      "Histogram": {
        "value": 66.66667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/packets_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.83333,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/errors_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.66667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/dropped_per_second/tx",
    "value": {
      "Histogram": {
        "value": 0.66667,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/total_bytes/tx",
    "value": {
      "Counter": {
        "value": 2000.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "interface/eth0/total_bytes/rx",
    "value": {
      "Counter": {
        "value": 2502.0,
        "timestamp": "[timestamp]"
      }
    }
  }
]
