meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__network_interfaces__test__wlan1.snap
---
source: memfaultd/src/metrics/system_metrics/network_interfaces.rs
expression: "NetworkInterfaceMetricCollector::<TestInstant>::parse_proc_net_dev_line(proc_net_dev_line).unwrap()"
---
[
  "wlan1",
  [
    2707,
    25,
    0,
    0,
    0,
    0,
    0,
    0,
    2707,
    25,
    0,
    0,
    0,
    0,
    0,
    0
  ]
]
